k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akazwzdotcom-deployment
  namespace: akazwzdotcom
spec:
  replicas: 4
  selector:
    matchLabels:
      app: akazwzdotcom
  template:
    metadata:
      labels:
        app: akazwzdotcom
    spec:
      containers:
        - name: akazwzdotcom
          image: akazwz/akazwzdotcom:5b5634d
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
