k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akazwzdotcom-service
  namespace: akazwzdotcom
spec:
  selector:
    app: akazwzdotcom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
